timetable/static/css/style.css
/* Sticky footer styles
-------------------------------------------------- */

html,
body {
  height: 100%;
  /* The html and body elements cannot have any padding or margin. */
}

/* Wrapper for page content to push down footer */
#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  /* Negative indent footer by its height */
  margin: 0 auto -80px;
  /* Pad bottom by footer height */
  padding: 0 0 80px;
}

/* Set the fixed height of the footer here */
#footer {
  height: 80px;
  padding-top: 20px;
  background-color: #222222;
  border-color: #080808;
}
#footer p {
  margin: 0;
  padding: 0;
}

/* Space out content a bit */
html {
  background-color: #f0f0f0;
  /*See http://css-tricks.com/perfect-full-page-background-image/*/
  background: no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
body {
  padding-top: 20px;
  background-color: transparent;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Make the masthead heading the same height as the navigation */
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
  padding-bottom: 19px;
}

.alert {
  font-size: 14px;
  margin: 10px 0px 0px 0px;
  padding-top: 5px;
  padding-bottom: 5px;
}

/*.navbar-nav {
  border-left: 1px solid #999999;
}*/

/*.navbar-nav li {
  background-repeat: no-repeat;
  background-image: url('arrow.png');
  background-position: right;
  padding-right: 20px;
}*/

/* Customize container */
@media (min-width: 768px) {
  .container {
    max-width: 90%;
  }
}
.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: left;
  background-color: rgba(240,240,240,0.8);
}
.jumbotron .btn-default {
  font-size: 15px;
  padding: 14px 24px;
  overflow: hidden;
}

.jumbotron h1, .navbar-brand {
  font-family: Georgia;
  font-variant: small-caps;
  font-style: bold;
}

.jumbotron h1 {
  color: #c8102e;
}
/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}
.marketing p + h4 {
  margin-top: 28px;
}

.content {
  margin: 10px 0px;
}

.content div {
  margin: 5px 0px;
}

.content .btn-default {
  width: 100%;
  font-size: 18px;
}

.btn.active {
  color: #c8102e !important;
}

.nav-tabs li.active a {
  color: #fff;
  background-color: #d9534f;
}

.nav-tabs li a:hover, .nav-tabs li.active a:hover {
  color: #fff;
  background-color: #c8102e;
}

dd {
  margin-bottom: 20px;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 992px) {
  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }

  .breadcrumbs.navbar-nav li {
    background-repeat: no-repeat;
    background-image: url('arrow.png');
    background-position: right;
    padding-right: 20px;
  }
}

.video-container {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px; height: 0; overflow: hidden;
    margin-top: 5px;
}
 
.video-container iframe,
.video-container object,
.video-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

